# ambition-legacy

./: Cargo.toml  LICENSE  README.md  go.sum
backend/: README.md  go.mod  go.sum  main.go  user.go  util.go
backend/sql/: init.sql
frontend/: README.md  go.mod  go.sum  main.go  player.go  ui.go
frontend/assets/fonts/: embed.go  go.mod
frontend/player/: go.mod  player.go
frontend/server/: go.mod  go.sum  requests.go  server.go
frontend/ui/: go.mod  go.sum  login.go  ui.go
